--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coin-counter",
   "version": "1.0.0",
-  "description": "Coin counting application",
+  "description": "Command line coin counting application",
   "main": "index.js",
   "scripts": {
     "test": "jest"
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/toddpla/coin-counter#readme",
   "dependencies": {},
   "devDependencies": {
+    "eslint": "^5.13.0",
     "jest": "^24.1.0"
   }
 }
