--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/toddpla/coin-counter#readme",
   "dependencies": {
-    "eslint-plugin-jest": "^22.2.2"
+    "eslint-plugin-jest": "^22.2.2",
+    "numeral": "^2.0.6"
   },
   "devDependencies": {
     "eslint": "^5.13.0",
