--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Command line coin counting application",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
